--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-spring.application.name=beta
+# MYSQL
+spring.datasource.url= jdbc:mysql://localhost:3306/demo_helpdesk?useTimezone=true&serverTimezone=America/Sao_Paulo&useSSL=false
+spring.datasource.username= root
+spring.datasource.password= Strupeeyus18#
+
+#JPA
+spring.jpa.hibernate.ddl-auto= none
+spring.jpa.show-sql= true
+spring.jpa.open-in-view= true
+
+# THYMELEAF
+spring.thymeleaf.cache= false
