--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 # MYSQL
-spring.datasource.url= jdbc:mysql://localhost:3306/demo_helpdesk?useTimezone=true&serverTimezone=America/Sao_Paulo&useSSL=false
-spring.datasource.username= root
-spring.datasource.password= Strupeeyus18#
+spring.datasource.url=jdbc:mysql://localhost:3306/demo_helpdesk?useTimezone=true&serverTimezone=America/Sao_Paulo&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=Strupeeyus18#
 
-#JPA
-spring.jpa.hibernate.ddl-auto= none
-spring.jpa.show-sql= true
-spring.jpa.open-in-view= true
+# JPA
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # THYMELEAF
-spring.thymeleaf.cache= false
+spring.thymeleaf.cache=false
