--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,13 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # THYMELEAF
 spring.thymeleaf.cache=false
 
+# SEND EMAIL
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=demodeskservice@gmail.com
+spring.mail.password=demo123@
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.test-connection=true
 
