🔨implementando configuração mail sender

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,11 +14,10 @@ spring.thymeleaf.cache=false
 
 # SEND EMAIL
 
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=demodeskservice@gmail.com
-spring.mail.password=demo123@
+spring.mail.host=sandbox.smtp.mailtrap.io
+spring.mail.port=465
+spring.mail.username=d6a845a72ae19f
+spring.mail.password=879d6bd55f6567
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.test-connection=true
 
