✔️ implementado com sucesso

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # THYMELEAF
 spring.thymeleaf.cache=false
 
-# SEND EMAIL
+# invalida a sessão depois de X minutos de inatividade
 
+server.servlet.session.timeout=1m
+
+# SEND EMAIL
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=demodeskservice@gmail.com
